--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GOOGLE_CLIENT_ID=see-instructions-in-readme
-GOOGLE_CLIENT_SECRET=see-instructions-in-readme
-ADMIN_EMAILS=phtcon@ucsb.edu
+GOOGLE_CLIENT_ID=565825237720-52tkjtrfjh3cap8emsiifg0fj1t2u67g.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+ADMIN_EMAILS=phtcon@ucsb.edu,yufei_song@ucsb.edu
